# ai-agent

./: .agent_rules.json  .env.example  .gitignore  LICENSE  README.md  app.py  openai_response_example.txt  pyproject.toml  requirements.txt  test.ipynb
ai_agent/: __init__.py  registry_helper.py
ai_agent/actions/: README.md  __init__.py  base.py  categories.py  data_actions.py  documentation.py  file_actions.py  registry.py  registry_helper.py  results.py  testing.py  validation.py  web_actions.py
ai_agent/actions/examples/: __init__.py  data_actions.py  file_actions.py  web_actions.py
ai_agent/agent/: __init__.py  context.py  service.py  views.py
ai_agent/agent/message_manager/: __init__.py  (+4 more)
ai_agent/common/: __init__.py  models.py
ai_agent/controller/: __init__.py  actions.py  service.py
ai_agent/filesystem/: __init__.py  file_system.py
ai_agent/llm/: __init__.py  base.py  exceptions.py  factory.py  messages.py  schema.py  types.py  views.py
ai_agent/mcp/: __init__.py  client.py  models.py  server.py
ai_agent/prompts/: __init__.py  base.py  builder.py  context.py  prompts.py
ai_agent/registry/: __init__.py  models.py  service.py  views.py
ai_agent/tokens/: service.py  views.py
ai_agent/utils/: __init__.py  config.py  core.py  logging.py  observability.py
examples/: __init__.py  advanced_usage.py  custom_actions.py  mcp_integration.py  simple_agent.py
src/: config.py  mcp_bridge.py  service.py
src/tools/: image_tool_server.py  perplexity_server.py  planner_server.py  rules_server.py
tests/: test_action_framework.py  test_mcp_integration.py
(+12 files in other folders)
